--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Serverless API to take screenshots of websites with Puppeteer.",
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
-    "puppeteer-core": "23.9.0",
+    "@sparticuz/chromium": "^109.0.5",
+    "puppeteer-core": "^19.4.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
