--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Serverless API to take screenshots of websites with Puppeteer.",
   "dependencies": {
     "@sparticuz/chromium": "^109.0.5",
-    "puppeteer-core": "21.5.0",
+    "puppeteer-core": "^19.4.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
